[package]
name = "klangraum"
version = "0.1.0"
authors = ["lucdoebereiner <luc.doebereiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "*"
crossbeam-channel = "*"
native-tls = "*"
tungstenite = "*"
minimp3 = "*"
flexi_logger = { version = "0.16", default_features = false }
log = "0.4"
bus = "*"
tokio = { features = ["sync"] }
# [dependencies.ws]
# version = "0.9.1"
# features = ["ssl"]